MasterTrailRepo/src/objects/Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Benefits_Administrator__c</fullName>
        <label>Benefits Administrator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capitated_Plantest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capitated Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <label>Contact Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Plan_Number__c</fullName>
        <label>Group/Plan Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Payer_Name__c</fullName>
        <label>Insurance Payer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OIP_Name__c</fullName>
        <label>OIP Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OIP_Role__c</fullName>
        <label>OIP Role</label>
        <picklist>
            <picklistValues>
                <fullName>managed Medical Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilization Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Number__c</fullName>
        <label>Other Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_State_Fed_Funded_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other State/ Fed Funded Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PBM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PBM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Unconsented Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurance (PBM)</relationshipLabel>
        <relationshipName>Insurance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Insurance Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Sub_Type__c</fullName>
        <label>Plan Sub Type</label>
        <picklist>
            <controllingField>Plan_Type__c</controllingField>
            <picklistValues>
                <fullName>EPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indemnity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP - Indequate Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP - Loss of Dependent Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP - Low Annual Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP - Low LTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP - No Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP - Non US Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP - Pre-EX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part C HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part C Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part C PBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part C POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part C PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part D Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Part D/Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplemental/Medigap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Supplemental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correctional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk Pool - Fed/PCIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk Pool - State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIX - Health Insurance Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCHIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Name__c</fullName>
        <label>Policy Holder Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <label>Relation</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Self_Insured__c</fullName>
        <label>Self Insured</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Administrator</label>
        <type>Checkbox</type>
    </fields>
    <label>Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INS-{0000}</displayFormat>
        <label>Insurance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <recordTypes>
        <fullName>Insurance</fullName>
        <active>true</active>
        <label>Insurance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>self_insured_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( Self_Insured__c , &apos;Yes&apos;) , ISBLANK( Employer_Name__c )  ||  ISBLANK( Employer_Phone__c )  || ISBLANK( Benefits_Administrator__c ) , null)</errorConditionFormula>
        <errorMessage>employer name,employer phone &amp; benefits administrator must be entered</errorMessage>
    </validationRules>
</CustomObject>